--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,27 @@ services:
       - "5000:5000"
     volumes:
       - .:/app
+    networks:
+      mynetwork:
+        ipv4_address: 172.25.0.3
 
+  db:
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: пароль
+    volumes:
+      - mysql-data:/var/lib/mysql
+    networks:
+      mynetwork:
+        ipv4_address: 172.25.0.2
 
-#  unittests:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    # Настройка для контейнера, в котором будут запускаться тесты
-#    command: ["pytest"]
-#    # В этой строке нужно удалить зависимость от сервиса app
+networks:
+  mynetwork:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.25.0.0/24
+
+volumes:
+  mysql-data:
